# OO2026Koodit

./: README.md
viikko1olio/: CMakeLists.txt  main.cpp
viikko2olio/: CMakeLists.txt  game.cpp  game.h  main.cpp
viikko3olio/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikko4olio/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp
viikko5olio/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikko6olio/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikko7olio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko8olio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
